<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_attendance">

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.securo.ui.dashboard.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_scanqr"
        android:name="com.example.securo.ui.home.QrFragment"
        android:label="@string/title_scanqr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.securo.ui.notifications.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>