<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#5187DA"
    android:paddingBottom="10dp"
    android:paddingTop="20dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/logo_image" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="355dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:text="@string/LoginTxt"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/EditLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/EnterLogin" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="cursive"
                android:text="@string/PasswordTxt"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/EditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:inputType="textPassword"
                android:hint="@string/EnterPassword" />

            <Button
                android:id="@+id/LoginBtn"
                android:layout_width="150dp"
                android:layout_height="63dp"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#5187DA"
                android:gravity="center"
                android:text="@string/LoginToEnter" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>